# qcs-sdk-rust

./: .dockerignore  .gitignore  .gitlab-ci.yml  .releaserc.yml  .whitesource  CHANGELOG.md  CODEOWNERS  Cargo.toml  Makefile.toml  README.md  THIRDPARTY.yaml  _tracing_subscriber.html  clippy.toml  crate-merge-plan.md  deny.toml  index.html  knope.toml  license_warnings.txt  manual_changes_thirdparty.txt  qcs_sdk.html  search.js
c-lib/: Cargo.toml  Makefile.toml  README.md  cbindgen.toml  libqcs.h
c-lib/docs/: book.toml
c-lib/docs/src/: SUMMARY.md  getting_started.md  installation.md
c-lib/docs/src/api/: free_program_result.md  program_result.md  run_program_on_qpu.md  run_program_on_qvm.md
c-lib/src/: lib.rs  qpu.rs  quantum_processors.rs  qvm.rs
c-lib/tests/: integration_tests.c  test_list_quantum_processors.c
cli/: Cargo.toml  Makefile.toml  README.md
cli/src/: main.rs
crates/lib/: CHANGELOG.md  Cargo.toml  Makefile.toml  README-py.md  README.md  THIRDPARTY.yaml  build.rs  pyproject.toml
crates/lib/examples/: batch_execution.rs  delayed_job_retrieval.rs  execute.rs  libquil.rs  local.rs  parametric_compilation.rs  quil_t.rs  randomized_measurements.rs
crates/lib/python/: stubtest-allowlist
crates/lib/python/qcs_sdk/: __init__.py  __init__.pyi  _qcs_sdk.pyi  client.py  client.pyi  diagnostics.py  diagnostics.pyi
crates/lib/scripts/: check-py-api.sh  check-quil-api.sh  lint-bindings.py  lint-sdk.py
crates/lib/scripts/pyo3_linter/: __init__.py  package.py
crates/lib/src/: api.rs  client.rs  diagnostics.rs  executable.rs  execution_data.rs  lib.rs  pickle.rs  register_data.rs
crates/lib/src/compiler/: libquil.rs  mod.rs  python.rs  quilc.rs  rpcq.rs
crates/lib/src/configuration/: mod.rs  secrets.rs  settings.rs
crates/lib/src/diagnostics/: mod.rs  python.rs
crates/lib/src/python/: client.rs  errors.rs  executable.rs  execution_data.rs  mod.rs  nonzero.rs  register_data.rs
crates/lib/src/qpu/: api.rs  client.rs  engagement.rs  execution.rs  externed_call.rs  mod.rs  (+8 more)
crates/lib/tests/: aspen_9_isa.json  basic_qvm.rs  bell_state_response_data.hex  compiler-isa-Aspen-8.json  mocked_qpu.rs  parametric_compilation.rs  prng_test_cases.json  qcs-isa-edges-without-gates.json  qcs-isa-excluding-dead-edges.json  qvm_api.rs  qvm_isa.json  random_9Q.quil  secrets.toml  settings.toml
crates/lib/tests_py/: conftest.py  test_client.py  test_diagnostics.py  test_executable.py  test_tracing_subscriber.py
crates/python/: .flake8  .stubtest-allowlist  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.rs  pyproject.toml  qcs_sdk.pyi  test.py
crates/python/qcs_sdk/: __init__.py  __init__.pyi  _executable.pyi  _execution_data.pyi  _register_data.pyi  _unitary_set.py  api.pyi  client.py  client.pyi  diagnostics.py
crates/python/scripts/: patch_grpc_web.py  patch_hyper_proxy.py  patch_package_name.py
crates/python/src/: api.rs  client.rs  executable.rs  execution_data.rs  from_py.rs  lib.rs  py_sync.rs  register_data.rs
crates/python/tests/: conftest.py  diagnostics.py  logging.py  test_api.py  test_client.py  test_diagnostics.py  test_executable.py  test_execution_data.py  test_isa.py  test_tracing_subscriber.py
qcs/: Cargo.toml  Makefile.toml  README.md  docker-compose.yml
qcs-api/: .openapi-generator-ignore  Cargo.toml  Makefile.toml  README.md  qcs_public.yaml
qcs-api/.openapi-generator/: FILES
qcs-api/custom_templates/: model.mustache
qcs-api/src/: lib.rs
qcs-api/src/apis/: account_api.rs  authentication_api.rs  client_applications_api.rs  configuration.rs  default_api.rs  endpoints_api.rs  engagements_api.rs  mod.rs  quantum_processors_api.rs  reservations_api.rs  translation_api.rs
qcs-api/src/models/: account_type.rs  add_group_user_request.rs  architecture.rs  auth_email_password_reset_token_request.rs  auth_reset_password_request.rs  auth_reset_password_with_token_request.rs  available_reservation.rs  characteristic.rs  check_client_application_request.rs  check_client_application_response.rs  checksum_description.rs  client_application.rs  client_applications_download_link.rs  create_endpoint_parameters.rs  create_engagement_request.rs  create_reservation_request.rs  edge.rs  endpoint.rs  engagement_credentials.rs  engagement_with_credentials.rs  error.rs  family.rs  find_available_reservations_response.rs  get_quilt_calibrations_response.rs  group.rs  health.rs  instruction_set_architecture.rs  internal_create_reservation_request.rs  internal_create_reservation_request_all_of.rs  invite_user_request.rs  list_client_applications_response.rs  list_endpoints_response.rs  list_group_users_response.rs  list_groups_response.rs  list_quantum_processors_response.rs  list_reservations_response.rs  mod.rs  node.rs  operation.rs  operation_site.rs  (+12 more)
qcs-util/: Cargo.toml  Makefile.toml  README.md
qcs-util/src/: engagement.rs  lib.rs  path.rs  secrets.rs  settings.rs
qcs/examples/: delayed_job_retrieval.rs  parametric_compilation.rs  quil_t.rs
qcs/src/: executable.rs  execution_result.rs  lib.rs  register_data.rs
qcs/src/configuration/: mod.rs  path.rs  secrets.rs  settings.rs
qcs/src/qpu/: engagement.rs  execution.rs  lodgepole.rs  mod.rs  rewrite_arithmetic.rs  rpcq.rs  runner.rs  translation.rs
qcs/src/qvm/: execution.rs  mod.rs
qcs/tests/: basic_qvm.rs  mocked_qpu.rs  parametric_compilation.rs  test_qpu.rs  test_qvm.rs
qpu/: Cargo.toml  Makefile.toml  README.md
qpu/src/: lib.rs  lodgepole.rs  translation.rs
qpu/tests/: mocked_endpoint_tests.rs  raw_capture.hex
quilc/: Cargo.toml  Makefile.toml  README.md
quilc/examples/: compile_quil_for_aspen_9.rs
quilc/src/: lib.rs  rpcq.rs
quilc/src/isa/: edge.rs  mod.rs  operator.rs  qubit.rs
quilc/tests/: isa_fixtures.rs  quilc_integration_tests.rs
qvm/: Cargo.toml  Makefile.toml  docker-compose.yml
qvm-api/: Cargo.toml  Makefile.toml  README.md
qvm-api/src/: lib.rs
qvm-api/tests/: test_run_program_on_qvm.rs
qvm/src/: lib.rs
qvm/tests/: test_run_program_on_qvm.rs
rpcq/: Cargo.toml  Makefile.toml  README.md  docker-compose.yml
rpcq/src/: lib.rs
(+807 files in other folders)
