[workspace]
members = ["crates/lib"]
resolver = "2"

[workspace.dependencies]
# ndarray is used by the `qcs` crate, but it is also used in the `python` crate via a
# re-export through the numpy crate. They should be updated as a pair to keep both
# crates' versions of ndarray in sync.
# Similarly, pyo3 packages (`numpy`, `pyo3*`) track versions together
# and need to be updated together.
ndarray = { version = "0.17.2", features = ["serde"] }
numpy = "0.27.1"
qcs-dependencies-client = { version = "0.3.2" }
pyo3 = { version = "0.27.2", features = ["num-complex", "multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }
pyo3-build-config = "0.27.2"
pyo3-log = { version = "0.13.2" }
pyo3-stub-gen = { version = "0.17.2", features = ["numpy"] }
serde_json = "1.0.86"
thiserror = "2.0.17"
tokio = "1.36.0"
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.19" }

# These dependencies we manage.
optipy = "0.1"
pyo3-opentelemetry = "0.7.0"
pyo3-tracing-subscriber = "0.5.0"
pyo3-tracing-subscriber-build = "0.5.0"
qcs-api-client-common = "0.18.1"
qcs-api-client-grpc = "0.18.1"
qcs-api-client-openapi = "0.19.1"
quil-rs = "0.35.0" 
rigetti-pyo3 = "0.5"
assert2 = "0.3.11"
async-trait = "0.1.73"
built = "0.6.1"
cached = "0.44.0"
derive_builder = "0.20.0"
enum-as-inner = "0.5.1"
erased-serde = "0.3.23"
float-cmp = "0.9.0"
futures = "0.3.26"
futures-util = "0.3.30"
hex = "0.4.3"
indexmap = "2.2.6"
insta = "1.29.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
libquil-sys = "0.4.2"
maplit = "1.0.2"
num = "0.4.0"
oauth2-test-server = "=0.1.3"
pastey = "0.2"
regex = "1.7.0"
rmp-serde = "1.1.1"
rstest = "0.26.0"
serde = "1.0.228"
simple_logger = { version = "4.1.0", default-features = false }
tempfile = "3.3.0"
test-case = "3.1.0"
toml = "0.9.8"
uuid = "1.10.0"
warp = { version = "0.4.3", default-features = false }
zmq = "0.10.0"

# The primary intent of these options is to reduce the binary size for Python wheels
# since PyPi has limits on how much storage a project can use.
# The LTO and codegen-units settings should have the added benefit of improving
# performance. The only benefit of stripping symbols is reducing binary size.
[profile.release]
strip = true
lto = true
codegen-units = 1
