[package]
name = "c-lib"
version = "0.0.0"
edition = "2018"
license = "Apache-2.0"

[lib]
name = "qcs"
crate-type = ["cdylib"]

[dependencies]
http = "0.2.4"
libc = "0.2.97"
qvm = { version = "0.0.0", path = "../qvm" }
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
