[package]
name = "c-lib"
description = "C bindings to the `qpu` and `qvm` crates."
version = "0.0.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-rust"
keywords = ["C", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "compilers", "science"]

[lib]
name = "qcs"
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.5"
http = "0.2.4"
qcs = { version = "0.0.0", path = "../qcs" }
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
