[package]
name = "cli"
version = "0.0.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
qcs-api = { version = "0.0.0",path = "../qcs-api" }
qcs-util = { version = "0.0.0", path = "../qcs-util" }
