[package]
name = "cli"
description = "A CLI for accessing the qpu and qvm crates, only used for smoke testing today."
version ="0.0.3"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-rust"
keywords = ["CLI", "Rigetti", "Quil", "Quantum", "QCS"]
categories = ["command-line-utilities"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
qcs = {version ="0.0.3", path = "../qcs"}
structopt = "0.3.26"
clap = "3.1.6"
env_logger = "0.9.0"
