[package]
name = "qcs"
description = "High level interface for running Quil on a QPU"
version = "0.0.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-rust"
keywords = ["pyquil", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "compilers", "science", "emulators"]

[dependencies]
dirs = "3.0.2"
enum-as-inner = "0.3.3"
eyre = "0.6.5"
futures = "0.3.15"
lazy_static = "1.4.0"
log = "0.4.14"
num = "0.4.0"
qcs-api = { version = "0.0.0", path = "../qcs-api" }
reqwest = { version = "0.11.4", features = ["rustls", "json"] }
rmp-serde = "0.15.5"
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.64"
tokio = { version = "1.8.1", features = ["fs"] }
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4"] }
zmq = { version = "0.9.2", features = ["vendored"] }

[dev-dependencies]
env_logger = "0.9.0"
erased-serde = "0.3.16"
float-cmp = "0.8.0"
futures-retry = "0.6.0"
hex = "0.4.3"
tempfile = "3.2.0"
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.1"
