[package]
name = "qcs"
description = "High level interface for running Quil on a QPU"
version = "0.3.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-rust"
keywords = ["pyquil", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "compilers", "science", "emulators"]

[features]
manual-tests = []

[dependencies]
dirs = "4.0.0"
enum-as-inner = "0.5.0"
futures = "0.3.21"
indexmap = "1.8.2"
lazy_static = "1.4.0"
log = "0.4.17"
num = "0.4.0"
qcs-api = { version = "0.0.5", path = "../qcs-api" }
quil-rs = "0.10.3"
reqwest = { version = "0.11.10", features = ["rustls", "json"] }
rmp-serde = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["fs"] }
toml = "0.5.9"
uuid = { version = "1.1.1", features = ["v4"] }
zmq = { version = "0.9.2", features = ["vendored"] }

[dev-dependencies]
erased-serde = "0.3.20"
float-cmp = "0.9.0"
hex = "0.4.3"
maplit = "1.0.2"
simple_logger = { version = "2.1.0", default-features = false }
tempfile = "3.3.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
