[package]
name = "qpu"
version = "0.0.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
eyre = "0.6.5"
num = "0.4.0"
qcs-api = { version = "0.0.0", path = "../qcs-api" }
qcs-util = { version = "0.0.0", path = "../qcs-util" }
quilc = { version = "0.0.0", path = "../quilc" }
rpcq = { version = "0.0.0", path = "../rpcq" }
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
hex = "0.4.3"
rmp-serde = "0.15.5"
tokio = { version = "1.8.1", features = ["macros"] }
