[package]
name = "qpu"
description = "High level interface for running Quil on a QPU"
version = "0.0.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-rust"
keywords = ["pyquil", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "compilers", "science"]

[dependencies]
eyre = "0.6.5"
log = "0.4.14"
num = "0.4.0"
qcs-api = { version = "0.0.0", path = "../qcs-api" }
qcs-util = { version = "0.0.0", path = "../qcs-util" }
quilc = { version = "0.0.0", path = "../quilc" }
rpcq = { version = "0.0.0", path = "../rpcq" }
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
env_logger = "0.9.0"
erased-serde = "0.3.16"
hex = "0.4.3"
log = "0.4.14"
rmp-serde = "0.15.5"
tokio = { version = "1.8.1", features = ["macros"] }
warp = "0.3.1"
zmq = "0.9.2"
