[package]
name = "qvm"
version = "0.0.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11.4", features = ["rustls", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
qcs-util = { version = "0.0.0", path = "../qcs-util" }
eyre = "0.6.5"

[dev-dependencies]
futures-retry = "0.6.0"
tokio = { version = "1.7.1", features = ["macros"] }
