[package]
name = "rpcq"
version = "0.0.0"
edition = "2018"

[dependencies]
rmp-serde = "0.15.5"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.26"
uuid = { version = "0.8.2", features = ["v4"] }
zmq = { version = "0.9.2", features = ["vendored"] }

[dev-dependencies]
qcs-util = { version = "0.0.0", path = "../qcs-util" }
tokio = { version = "1.8.1", features = ["macros"] }