[package]
name = "qcs"
description = "High level interface for running Quil on a QPU"
version = "0.26.2"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-rust"
keywords = ["pyquil", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "compilers", "science", "emulators"]
readme = "./README.md"

[lib]
name = "qcs"
crate-type = ["cdylib", "rlib"]

[features]
manual-tests = []
tracing = [
    "dep:tracing",
    "qcs-api-client-common/tracing",
    "qcs-api-client-grpc/tracing",
    "qcs-api-client-openapi/tracing",
]
tracing-config = [
    "tracing",
    "qcs-api-client-common/tracing-config",
    "qcs-api-client-grpc/tracing-config",
    "qcs-api-client-openapi/tracing-config",
]
libquil = ["dep:libquil-sys"]
grpc-web = ["qcs-api-client-grpc/grpc-web"]
tracing-opentelemetry = [
    "tracing-config",
    "qcs-api-client-grpc/tracing-opentelemetry",
    "qcs-api-client-openapi/tracing-opentelemetry",
]
python = [
    "dep:futures-util",
    "dep:numpy",
    "dep:pastey",
    "dep:pyo3",
    "dep:pyo3-async-runtimes",
    "dep:pyo3-build-config",
    "dep:pyo3-log",
    "dep:pyo3-opentelemetry",
    "dep:pyo3-tracing-subscriber",
    "dep:rigetti-pyo3",
    "experimental",
    "tracing-opentelemetry",
    "quil-rs/python",
    "qcs-api-client-common/python",
]
stubs = [
    "python",
    "dep:pyo3-stub-gen",
    "quil-rs/stubs",
    "qcs-api-client-common/stubs",
    "pyo3-tracing-subscriber/stubs",
    "rigetti-pyo3/stubs",
]
experimental = []

# When testing, use an internal feature to disable issuer validation.
_insecure-issuer-validation = ["qcs-api-client-common/_insecure-issuer-validation"]

[dependencies]
async-trait = { workspace = true }
cached = { workspace = true }
derive_builder = { workspace = true }
enum-as-inner = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
ndarray.workspace = true
num = { workspace = true, features = ["serde"] }
optipy.workspace = true
qcs-dependencies-client = { workspace = true, features = ["grpc", "http"] }
quil-rs.workspace = true
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
tokio-util = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zmq = { workspace = true }

# Enabled with the "tracing", "tracing-config", "tracing-opentelemtry", "python", or "stubs" features.
tracing = { workspace = true, optional = true, features = ["log"] }
qcs-api-client-common.workspace = true
qcs-api-client-grpc.workspace = true
qcs-api-client-openapi.workspace = true

# Enabled with the "libquil" feature.
libquil-sys = { workspace = true, optional = true }

# Enabled with the "tracing-opentelemetry" or "python" features.
pyo3-tracing-subscriber = { workspace = true, optional = true, features = ["pyo3", "layer-otel-otlp-file", "layer-otel-otlp"] }

# Enabled with the "python" or "stubs" features.
futures-util = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
pastey = { workspace = true, optional = true }

pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }
pyo3-opentelemetry = { workspace = true, optional = true }
rigetti-pyo3 = { workspace = true, optional = true, features = ["opentelemetry", "stubs", "async-tokio"] }

# Enabled with the "stubs" feature.
pyo3-stub-gen = { workspace = true, features = ["numpy"], optional = true }

[build-dependencies]
built = { workspace = true }

# Enabled with the "python" feature.
pyo3-build-config = { workspace = true, optional = true }

[dev-dependencies]
assert2 = { workspace = true }
erased-serde = { workspace = true }
float-cmp = { workspace = true }
hex = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
# keep pinned until this crate matures
oauth2-test-server = { workspace = true }
qcs-api-client-common = { workspace = true, features = ["test"] }
qcs-api-client-grpc = { workspace = true, features = ["server"] }
regex = { workspace = true }
rstest = { workspace = true }
simple_logger = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
warp = { workspace = true, features = ["server"] }

[[example]]
name = "compilation-and-simulation-with-libquil"
path = "examples/libquil.rs"
required-features = ["libquil"]

