[package]
name = "qcs-sdk-python"
description = "Python bindings to qcs-sdk-rust"
version = "0.14.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-rust"
keywords = ["pyquil", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "compilers", "science", "emulators"]
readme = "./README.md"

[features]
libquil = ["qcs/libquil"]

[lib]
name = "qcs_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.73"
qcs = { path = "../lib", features = ["tracing"] }
qcs-api.workspace = true
qcs-api-client-common.workspace = true
qcs-api-client-grpc.workspace = true
qcs-api-client-openapi.workspace = true
pyo3.workspace = true
pyo3-asyncio.workspace = true
quil-rs.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
numpy.workspace = true
rigetti-pyo3.workspace = true
paste = "1.0.11"
pyo3-log = "0.8.2"
once_cell = "1.18.0"

[build-dependencies]
pyo3-build-config.workspace = true
